<resources>
    <string name="app_name">FoodWise</string>
    <string name="login_welcome">Welcome to</string>
    <string name="login_motto">Your favorite foods delivered\nfast at your door</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="sign_email">Sign up with email</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="error_email">E-mail is already registered</string>
    <string name="error_login">Incorrect E-mail or Password. Please try again</string>
    <string name="empty_login">Email or password cannot be empty</string>
    <string name="hint_username">Your name</string>
    <string name="hint_password">Your password</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="hint_search_food">What do you want to eat?</string>
    <string name="near_you">Near you</string>
    <string name="recent_food">Recently posted</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>"
    <string name="reset_password_detail">Please enter your email address to \nrequest a password reset</string>
    <string name="deliver_to">Deliver to</string>
    <string name="home_quote">Hello!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

</resources>