<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/decor_donut_circle"
        android:backgroundTint="@color/green_1" />

    <View
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-70dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/decor_donut_circle"
        android:backgroundTint="@color/white" />

    <View
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/decor_circle"
        android:backgroundTint="@color/gray_2" />

    <View
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="-100dp"
        android:background="@drawable/decor_donut_circle"
        android:backgroundTint="@color/green_1" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="0dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        android:elevation="6dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/helvetica_normal"
            android:text="@string/login"
            android:textSize="45sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/helvetica_normal"
                android:text="E-mail"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/half_rounded_rect_stroke"
                android:fontFamily="@font/helvetica_normal"
                android:hint="@string/hint_email"
                android:padding="16dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/helvetica_normal"
                android:text="Password"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/half_rounded_rect_stroke"
                android:fontFamily="@font/helvetica_normal"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="16dp" />
            <TextView
                android:id="@+id/error_msg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/helvetica_normal"
                android:textSize="16sp"
                android:textColor="@color/error"
                android:text="@string/error_login"
                android:visibility="invisible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/to_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_normal"
                android:text="@string/forgot_password"
                android:textColor="@color/green_1" />


        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green_1"
            android:fontFamily="@font/helvetica_normal"
            android:letterSpacing="0.02"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/helvetica_normal"
                android:text="Don't have an account?"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/to_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_normal"
                android:text="@string/sign_up"
                android:textColor="@color/green_1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="89dp"
                android:layout_height="1dp"
                android:background="@color/line_neutral"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="Or Sign in with"
                android:fontFamily="@font/helvetica_normal"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="89dp"
                android:layout_height="1dp"
                android:background="@color/line_neutral"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/facebook_login"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/gray_2"
                android:fontFamily="@font/helvetica_normal"
                android:text="@string/facebook"
                android:textColor="@color/black"
                app:icon="@drawable/facebook_icon"
                app:iconTintMode="multiply" />

            <Button
                android:id="@+id/google_login"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray_2"
                android:fontFamily="@font/helvetica_normal"
                android:text="@string/google"
                android:textColor="@color/black"
                app:icon="@drawable/google_icon"
                app:iconTintMode="multiply" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>