<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">
    <View
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/decor_donut_circle"
        android:backgroundTint="@color/green_1" />
    <View
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-70dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/decor_donut_circle"
        android:backgroundTint="@color/white" />
    <View
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/decor_circle"
        android:backgroundTint="@color/gray_2" />
    <View
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-90dp"
        android:layout_marginEnd="-100dp"
        android:background="@drawable/decor_donut_circle"
        android:backgroundTint="@color/green_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/helvetica_normal"
            android:textSize="45sp"
            android:textStyle="bold"
            android:text="@string/sign_up"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/helvetica_normal"
                android:textSize="16dp"
                android:text="Full Name"/>
            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/half_rounded_rect_stroke"
                android:padding="16dp"
                android:fontFamily="@font/helvetica_normal"
                android:inputType="text"
                android:hint="@string/hint_username" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/helvetica_normal"
                android:textSize="16sp"
                android:text="E-mail"/>
            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/half_rounded_rect_stroke"
                android:padding="16dp"
                android:fontFamily="@font/helvetica_normal"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" />
            <TextView
                android:id="@+id/error_msg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/helvetica_normal"
                android:textSize="16sp"
                android:textColor="@color/error"
                android:text="@string/error_email"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/helvetica_normal"
                android:textSize="16sp"
                android:text="Password"/>
            <EditText
                android:id="@+id/pass_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/half_rounded_rect_stroke"
                android:padding="16dp"
                android:fontFamily="@font/helvetica_normal"
                android:inputType="textPassword"
                android:hint="@string/hint_password"/>

        </LinearLayout>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/helvetica_normal"
            android:backgroundTint="@color/green_1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:letterSpacing="0.02"
            android:text="@string/sign_up"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/helvetica_normal"
                android:text="Already have an account?"/>
            <TextView
                android:id="@+id/to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green_1"
                android:fontFamily="@font/helvetica_normal"
                android:text="@string/login"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="89dp"
                android:layout_height="1dp"
                android:background="@color/line_neutral"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/helvetica_normal"
                android:text="Or Sign up with"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="89dp"
                android:layout_height="1dp"
                android:background="@color/line_neutral"
                android:orientation="vertical">
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/facebook_login"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/helvetica_normal"
                android:text="@string/facebook"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray_2"
                app:icon="@drawable/facebook_icon"
                app:iconTintMode="multiply" />

            <Button
                android:id="@+id/google_login"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_normal"
                android:text="@string/google"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray_2"
                app:icon="@drawable/google_icon"
                app:iconTintMode="multiply" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>